--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ nav ul li a:hover::after{
     margin-top: 20px;
 
 }
+.header-text p1{
+    color:crimson;
+}
 .header-text h1 span{
     color:crimson;
 }
